codegen/tests/attribute_provide/fail/struct_impl.rs
use depcon::*;

struct Bad;

#[provide]
impl Bad {}

fn main() {}
