codegen/tests/attribute_provide/fail/struct_impl.stderr
error: custom attribute panicked
 --> tests/attribute_provide/fail/struct_impl.rs:5:1
  |
5 | #[provide]
  | ^^^^^^^^^^
  |
  = help: message: attribute must be applied to a trait impl
